add snapshot and a11y test

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="./src/index.css">
 </head>
 <body>
-  <main class="wrapper">
+  <section class="wrapper">
     <h1 class="title">COUNTRY QUIZ</h1>
     <section class="answers"></section>
-  </main>
+  </section>
 
   <script src="./bundle.js"></script>
 </body>
