--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <section class="wrapper">
     <h1 class="title">COUNTRY QUIZ</h1>
+    <p class="score">Score: 0</p>
     <section class="answers"></section>
   </section>
 
